2008-12-28  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpgegltool.c (gimp_param_spec_duplicate): fixed typo
	in GEGL version number check.

2008-12-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 563985 – jpg save dialog: "cancel" is treated like "commit"
	for settings

	* plug-ins/file-jpeg/jpeg.c (run): only attach the comment and
	settings to the image if the save was successful.

2008-12-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 564087 – Using clone tool on a layer with a part out of canvas
	causes crashes

	* app/paint/gimppaintcore.c (gimp_paint_core_paste): intersect the
	rectangle with the extents of the saved projection.

2008-12-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 564593 – crash when the drawable is changed while a color
	tools is active

	* app/core/gimpdrawable-shadow.c (gimp_drawable_merge_shadow_tiles):
	keep a reference to the shadow tiles because it might otherwise be
	free'd under our feet.

2008-12-21  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 564869 – GIMP crashes on selecting Tools->GEGL operation

	* app/tools/gimptool.c (gimp_tool_initialize): check if the tool
	has set an error.

2008-12-21  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 565138 – python-fu-foggify does not check if image is in rgb mode

	* plug-ins/pygimp/plug-ins/foggify.py (foggify): fixed handling of
	grayscale images.

2008-12-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 563130 – Hue selection mode does not cross the 0-360 degrees line

	* app/core/gimpimage-contiguous-region.c (pixel_difference):
	applied patch from Daniel Hornung.

2008-12-04  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 563179 – Scrollbars not resized when we extend the canvas size

	* app/display/gimpdisplayshell-handlers.c
	(gimp_display_shell_size_changed_detailed_handler): Add explicit
	call to gimp_display_shell_scroll_clamp_and_update() at the end to